monitoring/templates/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ui
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  rules:
  - host: prometheus.trendyoltechcase.com
    http:
      paths:
      - backend:
          serviceName: prometheus-server-svc
          servicePort: 8080
